--- a/src/ClearButton.css
+++ b/src/ClearButton.css
@@ -1,12 +1,12 @@
 @keyframes slidein--bottom {
-    from {
-      opacity: 0;
-      transform: translateY(100%);
-    }
-    to {
-      opacity: 1;
-      transform: translateY(0);
-    }
+  from {
+    opacity: 0;
+    transform: translateY(100%);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
 
 @keyframes slideout--bottom {
@@ -21,40 +21,39 @@
 }
 
 .clear-button {
-    animation: slidein--bottom 0.7s backwards cubic-bezier(0.68, -0.55, 0.265, 1.55);
+  animation: slidein--bottom 0.7s backwards cubic-bezier(0.68, -0.55, 0.265, 1.55);
 
-    position: absolute;
-    top: 40%;
-    left: 0.5%;
-    z-index: 2;
+  position: absolute;
+  top: 40%;
+  left: 0.5%;
+  z-index: 2;
 
-    /* display: none; */
-    display: inline-block;
-    
-    width: 140px;
-    height: 45px;
+  /* display: none; */
+  display: inline-block;
 
-    line-height: 45px;
+  width: 140px;
+  height: 45px;
 
-    border-radius: 45px;
+  line-height: 45px;
 
-    margin: 10px 20px;
+  border-radius: 45px;
 
-    font-family: 'Montserrat', sans-serif;
-    font-size: 11px;
-    font-weight: 600;
+  margin: 10px 20px;
 
-    text-transform: uppercase;
-    text-align: center;
-    letter-spacing: 3px;
-    
-    color: #524f4e;
-    background: white;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 11px;
+  font-weight: 600;
 
-    box-shadow: 0 8px 15px rgba(0, 0, 0, .1);
+  text-transform: uppercase;
+  text-align: center;
+  letter-spacing: 3px;
+
+  color: #524f4e;
+  background: white;
+
+  box-shadow: 0 8px 15px rgba(0, 0, 0, 0.1);
 }
 
 .animate-deletion {
   animation: slideout--bottom 0.7s alternate cubic-bezier(0.68, -0.55, 0.265, 1.55);
 }
-
